<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.aptasystems.dicewarepasswordgenerator.HelpActivity"
            tools:showIn="@layout/activity_help">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_diceware_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="8dp"
            android:text="@string/help_diceware_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_why_diceware_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="8dp"
            android:text="@string/help_why_diceware_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_brute_force_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="8dp"
            android:text="@string/help_brute_force_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_time_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_time_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_estimate_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_estimate_content_1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_estimate_content_2"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_estimate_content_3"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_estimate_content_4"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_estimate_content_5"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/wordlists_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/wordlists_content_1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/wordlists_content_2"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/wordlists_content_3"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:autoLink="web"
            android:text="@string/wordlists_content_4"></TextView>
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_open_source_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingTop="8dp"
            android:text="@string/help_open_source_content_1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingTop="8dp"
            android:text="@string/help_open_source_content_2"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/help_who_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingTop="8dp"
            android:text="@string/help_who_content_1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingTop="8dp"
            android:text="@string/help_who_content_2"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="8dp"
            android:text="@string/help_who_content_3"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>
</ScrollView>
