<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".MainActivity"
              tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading_password"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lines="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="newPassword"
                android:text="@string/new_password"/>

            <Button
                android:id="@+id/copy_to_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="copyToClipboard"
                android:text="@string/copy_to_clipboard"/>

            <Button
                android:id="@+id/use_this_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="useThisPassword"
                android:text="@string/use_this_password"/>
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/heading_password_length"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/text_view_password_length_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/password_length_info"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/text_view_password_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/password_length"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <SeekBar
                android:id="@+id/seek_bar_password_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="9"
                android:paddingTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/heading_wordlist_source"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/radio_reinhold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setWordlistSource"
                    android:text="@string/radio_reinhold"/>

                <RadioButton
                    android:id="@+id/radio_eff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setWordlistSource"
                    android:text="@string/radio_eff"/>

                <RadioButton
                    android:id="@+id/radio_eff_short"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setWordlistSource"
                    android:text="@string/radio_eff_short"/>

                <RadioButton
                    android:id="@+id/radio_eff_short_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setWordlistSource"
                    android:text="@string/radio_eff_short_2"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/heading_random_number_source"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/radio_android_prng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setRandomMechanism"
                    android:text="@string/radio_android_prng"/>

                <RadioButton
                    android:id="@+id/radio_random_org"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setRandomMechanism"
                    android:text="@string/radio_random_org"/>

                <RadioButton
                    android:id="@+id/radio_dice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="setRandomMechanism"
                    android:text="@string/radio_dice"/>

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
