<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aptasystems.dicewarepasswordgenerator.EnterDiceValuesActivity"
    tools:showIn="@layout/activity_enter_dice_values">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_die_roll_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/die_roll_info"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/image_button_die_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/accessibility_die_face_one"
                    android:onClick="onDieTap"
                    android:src="@drawable/ic_button_one" />

                <ImageButton
                    android:id="@+id/image_button_die_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/accessibility_die_face_two"
                    android:onClick="onDieTap"
                    android:src="@drawable/ic_button_two" />

                <ImageButton
                    android:id="@+id/image_button_die_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/accessibility_die_face_three"
                    android:onClick="onDieTap"
                    android:src="@drawable/ic_button_three" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/image_button_die_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/accessibility_die_face_four"
                    android:onClick="onDieTap"
                    android:src="@drawable/ic_button_four" />

                <ImageButton
                    android:id="@+id/image_button_die_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/accessibility_die_face_five"
                    android:onClick="onDieTap"
                    android:src="@drawable/ic_button_five" />

                <ImageButton
                    android:id="@+id/image_button_die_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/accessibility_die_face_six"
                    android:onClick="onDieTap"
                    android:src="@drawable/ic_button_six" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/text_view_die_roll_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/die_roll_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
</RelativeLayout>
